1. Added links to cards, placeholder images and ph text - 2. Set up form to send mail - 3. Changed services toggle button and other minor aestetich changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "cSpell.words": [
         "Codepen",
         "Looong",
-        "checkmark"
+        "checkmark",
+        "mmerce",
+        "watchlist"
     ]
 }
